# qvm

./: .drone.star  .gitignore  .travis.yml  README.md  meson.build  meson_options.txt
.drone/: boost.sh  d9a42dfb5d-ed696db16c.sh
.github/workflows/: ci.yml  gh-pages.yml
doc/: Jamfile  qvm.adoc
include/boost/: qvm_light.hpp
include/boost/qvm/: all.hpp  all_lite.hpp  deduce_mat.hpp  deduce_quat.hpp  deduce_vec.hpp  enable_if.hpp  mat_operations.hpp  quat_operations.hpp  scalar_traits.hpp  vec_operations.hpp
include/boost/qvm/detail/: transp_impl.hpp
test/: Jamfile.v2  assign_test.cpp  cmp_mm_test.cpp  cmp_qq_test.cpp  cmp_vv_test.cpp  col_mat_test.cpp  col_test.cpp  conjugate_test.cpp  convert_to_test.cpp  cross_test.cpp  deduce_mat_test.cpp  deduce_quat_test.cpp  deduce_scalar_test.cpp  deduce_vec_test.cpp  del_col_test.cpp  del_row_col_test.cpp  del_row_test.cpp  determinant_test.cpp  diag_mat_test.cpp  diag_test.cpp  div_eq_ms_test.cpp  div_eq_qs_test.cpp  div_eq_vs_test.cpp  div_ms_test.cpp  div_qs_test.cpp  div_vs_test.cpp  dot_qq_test.cpp  dot_vv_test.cpp  eq_mm_test.cpp  eq_qq_test.cpp  eq_vv_test.cpp  identity_mat_test.cpp  identity_quat_test.cpp  interop_test.cpp  inverse_m_test.cpp  inverse_q_test.cpp  mag_q_test.cpp  mag_sqr_q_test.cpp  mag_sqr_v_test.cpp  mag_v_test.cpp  (+78 more)
